@@ -1,6 +1,6 @@
 # logR
 
-Complete logging solution. Evalutes, catch warning/error, log processing details to database. Log timing, in/out rows, custom metadata, waring/error messages. In case of alert also send email.
+Complete logging solution. Evalutes, catch warning/error, log processing details to database. Log timing, in/out rows, custom metadata, warning/error messages. In case of alert also send email.
 
 **Current version**: 1.0.2 ([NEWS](https://github.com/jangorecki/logR/blob/master/NEWS))
 
