@@ -1,5 +1,6 @@
 logR 1.0.2
 ==============
+* improved warning handling
 * improved email message
 * doc updates
 
